# ppth_metrics

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  metrics.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
tests/: test_parsers.py
